test/Fail/BuiltinAbstractNatural.err
BuiltinAbstractNatural.agda:9.1-26: error: [GenericError]
The builtin NATURAL must be a datatype with 2 constructors
when checking the pragma BUILTIN NATURAL ℕ
